kubernetes/apps/default/changedetection/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: changedetection
  labels:
    app.kubernetes.io/instance: changedetection
    app.kubernetes.io/name: changedetection
spec:
  replicas: 1
  revisionHistoryLimit: 0
  serviceName: "changedetection"
  selector:
    matchLabels:
      app.kubernetes.io/instance: changedetection
      app.kubernetes.io/name: changedetection
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: changedetection
        app.kubernetes.io/name: changedetection
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: changedetection-data
      containers:
        - name: changedetection
          image: dgtlmoon/changedetection.io:0.43
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: data
              mountPath: /datastore
          ports:
            - containerPort: 5000
              name: http
