kubernetes/apps/default/changedetection/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: changedetection
  labels:
    app.kubernetes.io/part-of: changedetection
    app.kubernetes.io/name: changedetection
    app.kubernetes.io/component: server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/part-of: changedetection
    app.kubernetes.io/name: changedetection
    app.kubernetes.io/component: server
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: http
